compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__float_operator_on_ints_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3033
expression: 1 <. 2
snapshot_kind: text
---
----- SOURCE CODE
1 <. 2

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:3
  │
1 │ 1 <. 2
  │   ^^ Use < instead

The <. operator can only be used on Floats.
