compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__fn0_eq_fn1.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 231
expression: "fn() { 1 } == fn(x) { x + 1 }"
snapshot_kind: text
---
----- SOURCE CODE
fn() { 1 } == fn(x) { x + 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:15
  │
1 │ fn() { 1 } == fn(x) { x + 1 }
  │               ^^^^^^^^^^^^^^^

Expected type:

    fn() -> Int

Found type:

    fn(Int) -> Int
