compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__function_return_annotation.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 301
expression: "fn() -> Int { 2.0 }"
snapshot_kind: text
---
----- SOURCE CODE
fn() -> Int { 2.0 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:15
  │
1 │ fn() -> Int { 2.0 }
  │               ^^^

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    Int

Found type:

    Float
