compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__guard_if_float.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 445
expression: "let x = 1.0 case x { _ if x -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
let x = 1.0 case x { _ if x -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:27
  │
1 │ let x = 1.0 case x { _ if x -> 1 }
  │                           ^

Expected type:

    Bool

Found type:

    Float
